--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "private": true,
   "scripts": {
-    "build": "node index.js && git commit --all -m \"Build\" && git push origin master",
-    "deploy": "npm run build && cd build && git add --all && git commit -m \"Build\" && git push origin gh-pages"
+    "build": "node index.js",
+    "deploy": "git push origin gh-pages",
+    "postbuild": "git commit --all -m 'Build' && git push origin master",
+    "predeploy": "npm run build && cd build && git add --all && git commit -m 'Build'"
   }
 }
