Change working directory again before pushing

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "scripts": {
     "build": "node index.js",
-    "deploy": "git push origin gh-pages",
+    "deploy": "cd build && git push origin gh-pages",
     "postbuild": "git commit --all -m 'Build' && git push origin master",
     "predeploy": "npm run build && cd build && git add --all && git commit -m 'Build'"
   }
