--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "node index.js",
     "deploy": "cd build && git push origin gh-pages",
-    "postbuild": "git commit --all -m 'Build' && git push origin master",
-    "predeploy": "npm run build && cd build && git add --all && git commit -m 'Build'"
+    "postbuild": "git commit --all -m \"Build\" && git push origin master",
+    "predeploy": "npm run build && cd build && git add --all && git commit -m \"Build\""
   }
 }
