Move `build/` to `dist/`

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "private": true,
   "scripts": {
     "build": "node index.js",
-    "deploy": "cd build && git push origin gh-pages",
+    "deploy": "cd dist && git push origin gh-pages",
     "postbuild": "git commit --all -m \"Build\" && git push origin master",
-    "predeploy": "npm run build && cd build && git add --all && git commit -m \"Build\""
+    "predeploy": "npm run build && cd dist && git add --all && git commit -m \"Build\""
   }
 }
