Install fs-extra

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "What I interested in.",
   "author": "Kyo Nagashima <hail2u@gmail.com> (https://kyonagashima.com/)",
   "devDependencies": {
+    "fs-extra": "^0.26.0",
     "mustache": "^0.8.2",
     "pit-ro": "^0.0.1",
     "request": "^2.36.0"
