--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "url": "https://github.com/hail2u/picks.hail2u.net.git"
   },
   "scripts": {
-    "build": "node index.js && npm run css && npm run img && npm run static",
-    "deploy": "cd dist && git push origin gh-pages",
+    "build": "node index.js && cd dist && git add --all && git commit -m \"Build\"",
     "css": "cp -aux src/css/* dist/css/",
+    "deploy": "cd dist && git push origin gh-pages",
     "img": "cp -aux src/img/* dist/img/",
-    "predeploy": "npm run build && cd dist && git add --all && git commit -m \"Build\"",
+    "prebuild": "npm run css && npm run img && npm run static",
+    "predeploy": "npm run build",
     "static": "cp src/.nojekyll src/CNAME src/favicon.ico dist/"
   }
 }
